add openvpn exporter

--- a/monitoring/prometheus/prometheus.service
+++ b/monitoring/prometheus/prometheus.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Prometheus Service
 Documentation=https://prometheus.io/docs/introduction/overview/
+Documentation=https://prometheus.io/download/
 After=network.target
 
 [Service]
