--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -29,3 +29,7 @@ scrape_configs:
   - job_name: "node_exporter"
     static_configs:
       - targets: ["localhost:9100"]
+  
+  - job_name: "openvpnas_exporter"
+    static_configs:
+      - targets: ["localhost:9176"]
